# black-and-white-video-temporal-pattern

./: Cargo.toml  LICENSE  README.md
src/: decode.rs  dispatch.rs  encode.rs  frame.rs  gpu_transform.rs  main.rs  messages.rs  patterns.rs
src/gpu_transform/: shaders.rs
src/gpu_transform/shaders/: regular_2f2w2h.rs  regular_2f2w2h.wgsl
